--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   pinput: ^5.0.1
+  http: ^1.3.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
