--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   shared_preferences: ^2.5.3
+  webview_flutter: ^4.11.0
 
 dev_dependencies:
   flutter_test:
