--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace = "com.app.ticket"
+    namespace = "com.wego.ticket"
 compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
@@ -27,7 +27,7 @@ compileSdk = 35
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.app.ticket"
+        applicationId = "com.wego.ticket"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
